# axl.math

./: .gitignore  CMakeLists.txt  README.md  TimeComplexities.md
include/axl.math/: Mat2d.hpp  Mat2f.hpp  Mat3d.hpp  Mat3f.hpp  Vec2.hpp  Vec2.inl  Vec2d.hpp  Vec2f.hpp  Vec3.hpp  Vec3.inl  Vec3d.hpp  Vec3f.hpp  Vec4.hpp  Vec4.inl  Vec4d.hpp  Vec4f.hpp  angle.hpp  basic.hpp  constants.hpp  double.hpp  everything.hpp  float.hpp  lib.hpp  mat.hpp  orders.hpp  rectangle.hpp  rules.hpp  transform.hpp  util.hpp  vec.hpp
include/axl.math/mat/: Mat2d.hpp  Mat2f.hpp  Mat3d.hpp  Mat3f.hpp  Mat4d.hpp  Mat4f.hpp  transform2.hpp  transform3.hpp  transform4.hpp
include/axl.math/rectangle/: Rectangled.hpp  Rectanglef.hpp  Rectanglei.hpp
include/axl.math/transform/: Transform4d.hpp  Transform4f.hpp
include/axl.math/vec/: Vec2.hpp  Vec2.inl  Vec2d.hpp  Vec2f.hpp  Vec2i.hpp  Vec3.hpp  Vec3.inl  Vec3d.hpp  Vec3f.hpp  Vec4.hpp  Vec4.inl  Vec4d.hpp  Vec4f.hpp
src/: CMakeLists.txt  Mat2d.cpp  Mat2f.cpp  Mat3d.cpp  Mat3f.cpp  Vec2d.cpp  Vec2f.cpp  Vec3d.cpp  Vec3f.cpp  Vec4d.cpp  Vec4f.cpp  angle.cpp  basic.cpp  double.cpp  float.cpp  lib.cpp  orders.cpp  rules.cpp  util.cpp
src/mat/: Mat2d.cpp  Mat2f.cpp  Mat3d.cpp  Mat3f.cpp  Mat4d.cpp  Mat4f.cpp  transform2.cpp  transform3.cpp  transform4.cpp
src/rectangle/: Rectangled.cpp  Rectanglef.cpp  Rectanglei.cpp
src/transform/: Transform4d.cpp  Transform4f.cpp
src/vec/: Vec2d.cpp  Vec2f.cpp  Vec2i.cpp  Vec3d.cpp  Vec3f.cpp  Vec4d.cpp  Vec4f.cpp
tests/: Assert.hpp  CMakeLists.txt  Mat2d.cpp  Mat2f.cpp  Mat3d.cpp  Mat3f.cpp  Vec2.cpp  Vec2d.cpp  Vec2f.cpp  Vec3.cpp  Vec3d.cpp  Vec3f.cpp  Vec4.cpp  Vec4d.cpp  Vec4f.cpp  angle.cpp  double.cpp  float.cpp  lib.cpp  lib.hpp  util.cpp
tests/mat/: Mat2d.cpp  Mat2f.cpp  Mat3d.cpp  Mat3f.cpp  Mat4d.cpp  Mat4f.cpp  transform3.cpp  transform4.cpp
tests/vec/: Vec2.cpp  Vec2d.cpp  Vec2f.cpp  Vec2i.cpp  Vec3.cpp  Vec3d.cpp  Vec3f.cpp  Vec4.cpp  Vec4d.cpp  Vec4f.cpp
