
link_libraries( axl.math )

add_executable( "axl.math.lib" lib.cpp )
add_executable( "axl.math.double" double.cpp )
add_executable( "axl.math.float" float.cpp )
add_executable( "axl.math.angle" angle.cpp )
add_executable( "axl.math.Vec2f" Vec2f.cpp )
add_executable( "axl.math.Vec2d" Vec2d.cpp )
add_executable( "axl.math.Vec2" Vec2.cpp )
add_executable( "axl.math.Vec3f" Vec3f.cpp )
add_executable( "axl.math.Vec3d" Vec3d.cpp )
add_executable( "axl.math.Vec3" Vec3.cpp )
add_executable( "axl.math.Vec4f" Vec4f.cpp )
add_executable( "axl.math.Vec4d" Vec4d.cpp )
add_executable( "axl.math.Vec4" Vec4.cpp )
add_executable( "axl.math.Mat2f" Mat2f.cpp )
add_executable( "axl.math.Mat2d" Mat2d.cpp )
add_executable( "axl.math.Mat3f" Mat3f.cpp )
add_executable( "axl.math.Mat3d" Mat3d.cpp )