
link_libraries( axl.math )

add_executable( "axl.math.transform4" "mat/transform4.cpp" )
add_executable( "axl.math.lib" "lib.cpp" )
add_executable( "axl.math.double" "double.cpp" )
add_executable( "axl.math.float" "float.cpp" )
add_executable( "axl.math.angle" "angle.cpp" )
add_executable( "axl.math.util" "util.cpp" )
add_executable( "axl.math.Vec2i" "vec/Vec2i.cpp" )
add_executable( "axl.math.Vec2f" "vec/Vec2f.cpp" )
add_executable( "axl.math.Vec2d" "vec/Vec2d.cpp" )
add_executable( "axl.math.Vec2" "vec/Vec2.cpp" )
add_executable( "axl.math.Vec3f" "vec/Vec3f.cpp" )
add_executable( "axl.math.Vec3d" "vec/Vec3d.cpp" )
add_executable( "axl.math.Vec3" "vec/Vec3.cpp" )
add_executable( "axl.math.Vec4f" "vec/Vec4f.cpp" )
add_executable( "axl.math.Vec4d" "vec/Vec4d.cpp" )
add_executable( "axl.math.Vec4" "vec/Vec4.cpp" )
add_executable( "axl.math.Mat2f" "mat/Mat2f.cpp" )
add_executable( "axl.math.Mat2d" "mat/Mat2d.cpp" )
add_executable( "axl.math.Mat3f" "mat/Mat3f.cpp" )
add_executable( "axl.math.Mat3d" "mat/Mat3d.cpp" )
add_executable( "axl.math.Mat4f" "mat/Mat4f.cpp" )
add_executable( "axl.math.Mat4d" "mat/Mat4d.cpp" )